fix whitespace issues

--- a/client/src/stylesheets/chat.scss
+++ b/client/src/stylesheets/chat.scss
@@ -7,7 +7,6 @@
 .chat-main {
   width: 100%;
   color: #D4F2D2;
-  height: 100%;
 }
 
 .chatview-wrapper {
